# 3D-Fast-paced-fps

./: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  LICENSE  Makefile  README.md  cmake_install.cmake  fragment.glsl  imgui.ini  makefile  shell.nix  test.sh  unit-tests-b12d07c_include.cmake  vertex.glsl
.cache/clangd/index/: ImGuizmo.h.8F08D9D339E4AE44.idx  blah.cpp.30B6CB9999A62A89.idx  editor.hpp.87F5E9169099DD0C.idx  frustumCulling.hpp.88A7860AFAB8FFA5.idx  geometry.cpp.609F8F94ECC9EB63.idx  geometry.hpp.617A5A9A4DE056C2.idx  glad.c.809C4F5C57292A2C.idx  glad.h.F6743B3861982E73.idx  imgui-gruvbox.hpp.C40B6D41787513BD.idx  imgui.h.BB25797FA9C17425.idx  imgui_impl_opengl3.h.55F1A782E2BA2EBA.idx  imgui_impl_sdl3.h.140D8EC2CACB2A45.idx  imgui_impl_sdlrenderer3.h.4EFE675173CAE2BD.idx  khrplatform.h.01C383C2A8516E05.idx  main.cpp.980C6D892B661BBF.idx  main.cpp.DF338FD813E89143.idx  mesh.hpp.9E26D6FE4F904C9C.idx  obj_loader.cpp.754B9E096C1883B3.idx  renderer.hpp.B62B80D6E158E550.idx  shader-utils.hpp.8C15DB136ACA3D72.idx  testlib.h.5A2962BA59183839.idx  unit-tests.hpp.D827C5916A24D84B.idx
.github/workflows/: c-cpp.yml
imguizmo/: ImGuizmo.h
include/: editor.hpp  frustumCulling.hpp  geometry.hpp  imgui-gruvbox.hpp  mesh.hpp  objdefs.hpp  renderer.hpp  shader-utils.hpp  testlib.h  unit-tests.hpp
shaders/: fragment.glsl  vertex.glsl
shaders/cullingTestShader/: fragment.glsl
src/: TESTS_SDL-oGL-basics.cpp  TESTS_file-loading.cpp  TESTS_full-game-integ-test.cpp  TESTS_main.cpp  TESTS_math.cpp  TESTS_oGL-face-culling.cpp  TESTS_rendering.cpp  blah.cpp  editor.cpp  frustumCulling.cpp  geometry.cpp  imgui-gruvbox.cpp  main.cpp  mesh.cpp  obj_loader.cpp  objdefs.cpp  renderer.cpp  shader-utils.cpp  unit-tests.cpp
tests/: unit-tests.cpp
